# WebsiteFinderRefinement

./: .gitignore  Accuracy.xlsx  accuracy-with-gtd.py  accuracy.py  accuracy_with_gtd.py  accuracy_with_gtd_ui.py  company_structures.py  company_structures_validation.py  company_websites.py  company_websites_validation.py  comparison.py  config.py  copyright.py  fireworks-requirements.txt  gtd.xlsx  helpers.py  index.py  log.txt  main.py  pyproject.toml  requirements.txt  response.xlsx  test-2.py  test-scrapegraph.py  test.py  tools.py
data/: ARC Resources LTD.xlsx  Cloudinary Ltd..xlsx  Delphix Corp.xlsx
data 1/__MACOSX/: ._data
data/subsidiaryfinding-Iteration/: ARC Resources Ltd..xlsx  Advent International.xlsx  Alberta Health Services Corporate Organization.xlsx  AlphaSense.xlsx  American Signature, Inc..xlsx  Anthem Properties Group.xlsx  Arterra wines.xlsx  Asurion Group, Inc..xlsx  BLICK.xlsx  Bausch and Lomb.xlsx  Bird buddy.xlsx  Bose Corporation.xlsx  Bright Money.xlsx  Brown-Forman Corporation.xlsx  CSG Systems International, Inc..xlsx  CareSource Management Services Co..xlsx  Caribou coffee company.xlsx  Cheneire Energy.xlsx  Cloudinary Ltd..xlsx  Crossrope.xlsx  D R Hortons.xlsx  DAVIDs TEA Inc..xlsx  DISA Global Solutions.xlsx  Dapper Labs, Inc..xlsx  Delphix Corp..xlsx  Dogtopia.xlsx  Dun & Bradstreet Holdings, Inc..xlsx  Dusty Robotics.xlsx  Economic Development Partnership of North Carolina.xlsx  Enterprise Holdings, Inc..xlsx  Entertainment Publications.xlsx  Fannie Mae Foundation.xlsx  Pop Reach.xlsx  (+36 more)
private/: advent_input.xlsx  anthem_input.xlsx
(+16 files in other folders)
